Cross site links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,10 @@
 		  {% endif %}
 		  
 		  {% if include.type == "post" %}
-		  <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }}</span>
+      <span class="post-meta">Publicado el {{ page.date | date: "%B %-d, %Y" }}</span>
+        {% if page.cross-site-link %}
+      <a href="{{ page.cross-sitel-ink }}" class="cross-site-link">English Version</a>
+        {% endif %}
 		  {% endif %}
         </div>
       </div>
@@ -61,7 +64,10 @@
 		  {% endif %}
 		  
 		  {% if include.type == "post" %}
-		  <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }}</span>
+      <span class="post-meta">Publicado el {{ page.date | date: "%B %-d, %Y" }}</span>
+        {% if page.cross-site-link %}
+      <a href="{{ page.cross-site-link }}" class="cross-site-link">English Version</a>
+        {% endif %}
 		  {% endif %}
         </div>
       </div>
