--- a/css/main.css
+++ b/css/main.css
@@ -344,6 +344,10 @@ footer .theme-by {
   font-size: 14px;
   margin: 0 0 10px;
 }
+.cross-site-link {
+  float: right;
+  font-size: 14px;
+}
 .post-preview .post-entry {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol"
 }
