--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="monetization" content="$ilp.uphold.com/mjGJ6BNKd6FH">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   {% seo %}
   <title>{% if page.use-site-title %}{{ site.title }} {{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
